# web-scraping

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: lint.yml  scrape.yml  test.yml
tests/: test_e2e.py  test_unit.py
