[project]
name = "web-scraping"
version = "0.1.0"
description = "Scrape the Winter Olympics 2026 medal table from olympics.com"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
