[project]
name = "web-scraping"
version = "0.1.0"
description = "Scrape the Winter Olympics 2026 medal table from olympics.com"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff] # Overrides settings from default https://docs.astral.sh/ruff/configuration/
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["W", "E501", "F401"]
